--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -4,6 +4,24 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  
+	<PackageId>MoneyExtensions</PackageId>
+	<Version>1.0.0</Version>
+	<License>MIT</License>
+	<Company>costa.io</Company>
+	<PackageDescription>Extension to convert decimal to integer</PackageDescription>
+	<Description>Extension to convert decimal to intege </Description>
+	<RepositoryUrl>https://github.com/andersoncostadev/money-extension</RepositoryUrl>
+	<PackageProjectUrl>https://github.com/andersoncostadev/money-extension</PackageProjectUrl>
+	<PackageIconUrl>icon.png</PackageIconUrl>
+	<PackageTags>money;int;decimal;converter</PackageTags>
+	<Title>Money Extensions</Title>
+	<Summary>Extension to convert decimal to integer</Summary>  
   </PropertyGroup>
+
+	<ItemGroup>
+		<None Include ="..\Media\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>		
+		
 
 </Project>
