--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  
-	<PackageId>MoneyExtensions</PackageId>
+	<PackageId>MoneyExtensionsCostaCompany</PackageId>
 	<Version>1.0.0</Version>
 	<License>MIT</License>
 	<Company>costa.io</Company>
