--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: '7.0.x'
+
+
+      - name: Build with dotnet    
         run: dotnet build --configuration Release
 
       - name: Test
